Added light animation, inline panel no more retractable
Committer: NyankoSensei
 Changes to be committed:
	modified:   GameData/DarkSideTechnology/Assets/C25.mu
	modified:   GameData/DarkSideTechnology/Assets/Texture1_NRM.dds
	new file:   GameData/DarkSideTechnology/Assets/Texture2_Emissive.dds
	modified:   GameData/DarkSideTechnology/Assets/Texture2_NRM.dds
	modified:   GameData/DarkSideTechnology/Parts/375ISP.cfg
	modified:   GameData/DarkSideTechnology/Parts/C25.cfg
	modified:   LICENSE.txt

--- a/GameData/DarkSideTechnology/Parts/375ISP.cfg
+++ b/GameData/DarkSideTechnology/Parts/375ISP.cfg
@@ -52,7 +52,7 @@ MODULE {
 MODULE {
 	name = ModuleDeployableSolarPanel
 	animationName = PanelDeploy
-	retractable = true
+	retractable = false
 	pivotName = sunPivot
 	raycastTransformName = suncatcher
 	resourceName = ElectricCharge
