--- a/GameData/DarkSideTechnology/Parts/C25.cfg
+++ b/GameData/DarkSideTechnology/Parts/C25.cfg
@@ -132,4 +132,13 @@ MODULE
 	startEventGUIName = Spin
 	endEventGUIName = Reverse
 }
+
+MODULE
+{
+	name = ModuleAnimateGeneric
+	layer = 2
+	animationName = WindowsLight
+	startEventGUIName = Light ON
+	endEventGUIName = Light OFF
+}
 }
