--- a/GameData/DarkSideTechnology/CTT.cfg
+++ b/GameData/DarkSideTechnology/CTT.cfg
@@ -9,3 +9,7 @@
     @TechRequired = cuttingEdgeSolarTech
 }
 
+@PART[DST_25ISP]:NEEDS[CommunityTechTree]
+{
+    @TechRequired = cuttingEdgeSolarTech
+}
