--- a/GameData/DarkSideTechnology/MM_Snacks.cfg
+++ b/GameData/DarkSideTechnology/MM_Snacks.cfg
@@ -1,11 +1,52 @@
 @PART[DST_Centrifuge25]:NEEDS[Snacks]
 {
+	MODULE
+	{
+		name = SoilRecycler
+		ConverterName = Soil Recycler
+		StartActionName = Start Soil Recycler
+		StopActionName = Stop Soil Recycler
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		UseSpecializationBonus = true
+		SpecialistEfficiencyFactor = 0.1
+		ExperienceEffect = ScienceSkill
+		EfficiencyBonus = 1.0
+		RecyclerCapacity = 4
+	 
+		INPUT_RESOURCE
+		{
+			ResourceName = Soil
+			Ratio = 0.0006
+			FlowMode = ALL_VESSEL
+  		}
 
-RESOURCE
-    {
-        name = Snacks
-        amount = 4000
-        maxAmount = 4000
-    }
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 30
+		}
 
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Snacks
+			Ratio = 0.0006
+			DumpExcess = false
+			FlowMode = ALL_VESSEL
+		}
+	}
+	RESOURCE
+    	{
+        	name = Snacks
+        	amount = 4500
+        	maxAmount = 4500
+    	}
+	RESOURCE
+	{
+		name = Soil
+		amount = 0
+		maxAmount = 600
+	}
 }
