--- a/GameData/DarkSideTechnology/Parts/C25.cfg
+++ b/GameData/DarkSideTechnology/Parts/C25.cfg
@@ -26,7 +26,7 @@ manufacturer = DarkSideTechnology Industries
 description = Observing his hamster Bill Kerman had the brilliant idea of exploit the centrifugal force to simulate gravity
 attachRules = 1,1,1,0,0
 
-mass = 14.0
+mass = 8.0
 dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.3
@@ -42,6 +42,12 @@ vesselType = Ship
 INTERNAL
 {
   name = Placeholder
+}
+
+DRAG_CUBE
+{
+	cube = A, 31.32,0.71,4.449, 31.32,0.7099,4.449, 48.36,0.932,4.881, 48.36,0.8783,4.233, 28.45,0.8334,6.14, 28.45,0.8337,6.14, 4.768E-07,0.875,0, 8.733,6.15,12.23
+	cube = B, 24.9,0.6853,4.449, 24.9,0.6853,4.449, 43.43,0.9402,5.454, 43.43,0.8817,5.18, 28.48,0.8351,4.531, 28.48,0.8355,4.531, 4.768E-07,0.875,0, 8.733,6.15,8.969
 }
 
 MODULE
@@ -113,7 +119,42 @@ MODULE
 }
 
 
-
+	MODULE
+	{
+		name = ModuleColorChanger
+		shaderProperty = _EmissiveColor
+		animRate = 0.8
+		animState = false
+		useRate = true
+		toggleInEditor = true
+		toggleInFlight = true
+		toggleInFlight = true
+		unfocusedRange = 5
+		toggleName = Toggle Lights
+		eventOnName = Lights On
+		eventOffName = Lights Off
+		toggleAction = True
+		defaultActionGroup = Light
+		redCurve
+		{
+			key = 0 0 0 3
+			key = 1 1 0 0
+		}
+		greenCurve
+		{
+			key = 0 0 0 1
+			key = 1 1 1 0
+		}
+		blueCurve
+		{
+			key = 0 0 0 0
+			key = 1 0.7 1.5 0
+		}
+		alphaCurve
+		{
+			key = 0 1
+		}
+	}
 MODULE
 {
 	name = ModuleAnimateGeneric
@@ -122,6 +163,7 @@ MODULE
 	actionGUIName = Toggle
 	startEventGUIName = Deploy
 	endEventGUIName = Retract
+	actionGUIName = Toggle Deploy
 }
 
 MODULE
@@ -129,16 +171,8 @@ MODULE
 	name = ModuleAnimateGeneric
 	layer = 1
 	animationName = Rotation
+	isOneShot = false
 	startEventGUIName = Spin
 	endEventGUIName = Reverse
-}
-
-MODULE
-{
-	name = ModuleAnimateGeneric
-	layer = 2
-	animationName = WindowsLight
-	startEventGUIName = Light ON
-	endEventGUIName = Light OFF
 }
 }
