--- a/GameData/DarkSideTechnology/Parts/25ISP.cfg
+++ b/GameData/DarkSideTechnology/Parts/25ISP.cfg
@@ -1,6 +1,6 @@
 PART
 {
-name = DST_375ISP
+name = DST_25ISP
 module = Part
 author = Badsector
 
@@ -8,25 +8,24 @@ MODEL
 {
 	model = DarkSideTechnology/Assets/375ISP
 }
-rescaleFactor = 1
+rescaleFactor = 0.67
 
-node_stack_top = 0.0, 0.275, 0.0, 0.0, 1.0, 0.0, 3
-node_stack_bottom = 0.0, -0.275, 0.0, 0.0, -1.0, 0.0, 3
+node_stack_top = 0.0, 0.275, 0.0, 0.0, 1.0, 0.0, 2
+node_stack_bottom = 0.0, -0.275, 0.0, 0.0, -1.0, 0.0, 2
 
 
 
 TechRequired = largeElectrics
 entryCost = 40000
-cost = 20000
-category = Electrical
+cost = 15000
+category = Utility
 subcategory = 0
-title = 3.75m Inline Solar Panel  
+title = 2.5m Inline Solar Panel  
 manufacturer = DarkSideTechnology Industries
 description = ATTENTION !!! Be sure to keep the path free, when Extended the panel rotate under ship axis.
-// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
-attachRules = 1,0,1,0,0
+attachRules = 1,1,1,0,0
 
-mass = 2
+mass = 1
 dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.3
@@ -35,26 +34,29 @@ crashTolerance = 8
 breakingForce = 500
 breakingTorque = 500
 maxTemp = 1800
-bulkheadProfiles = size3, srf
+bulkheadProfiles = size2, srf
 
 MODULE {
 	name = ModuleDeployableSolarPanel
-	animationName = Sensor
+	retractable = false
+	sunTracking = true
 	pivotName = Pivot
-	raycastTransformName = YSensor
+	raycastTransformName = suncatcher01
 	resourceName = ElectricCharge
 	isBreakable = false
+	trackingSpeed = 0.5		
 	chargeRate = 0
 }
 	
 MODULE {
 	name = ModuleDeployableSolarPanel
 	animationName = PanelDeploy
+	retractable = false
 	pivotName = sunPivot
 	raycastTransformName = suncatcher
 	resourceName = ElectricCharge
 	isBreakable = true
-	chargeRate = 146
+	chargeRate = 95
 }	
 }
 
