--- a/GameData/DarkSideTechnology/Parts/25ISP.cfg
+++ b/GameData/DarkSideTechnology/Parts/25ISP.cfg
@@ -18,12 +18,12 @@ node_stack_bottom = 0.0, -0.275, 0.0, 0.0, -1.0, 0.0, 2
 TechRequired = largeElectrics
 entryCost = 40000
 cost = 15000
-category = Utility
+category = Electrical
 subcategory = 0
 title = 2.5m Inline Solar Panel  
 manufacturer = DarkSideTechnology Industries
 description = ATTENTION !!! Be sure to keep the path free, when Extended the panel rotate under ship axis.
-attachRules = 1,1,1,0,0
+attachRules = 1,0,1,0,0
 
 mass = 1
 dragModelType = default
@@ -38,20 +38,17 @@ bulkheadProfiles = size2, srf
 
 MODULE {
 	name = ModuleDeployableSolarPanel
-	retractable = false
-	sunTracking = true
+	animationName = Sensor
 	pivotName = Pivot
-	raycastTransformName = suncatcher01
+	raycastTransformName = YSensor
 	resourceName = ElectricCharge
 	isBreakable = false
-	trackingSpeed = 0.5		
 	chargeRate = 0
 }
 	
 MODULE {
 	name = ModuleDeployableSolarPanel
 	animationName = PanelDeploy
-	retractable = false
 	pivotName = sunPivot
 	raycastTransformName = suncatcher
 	resourceName = ElectricCharge
